<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <android.widget.ScrollView
        android:id="@+id/scroll_view_animal_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="visible">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:orientation="vertical">


            <ImageView
                android:id="@+id/image_view_animal_image"
                android:layout_width="match_parent"
                android:layout_height="280dp"
                android:fitsSystemWindows="true"
                android:src="@drawable/ic_cow_white_48dp"
                android:background="@color/colorPrimary"/>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/edit_text_register_number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/register"
                    android:inputType="number"
                    tools:text="Registro" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/edit_text_animal_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/name"
                    tools:text="Vaca Loca" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/text_input_animal_birth_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="false">

                <EditText
                    android:id="@+id/edit_text_animal_birth_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/birthDate"
                    android:focusable="false"
                    tools:text="01/12/2001" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/edit_text_race"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/race"
                    tools:text="Raça" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/edit_text_animal_coat"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/coat"
                    tools:text="Pelagem" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/edit_text_animal_father_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/fatherName"
                    tools:text="Nome do Pai" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/edit_text_animal_mother_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/motherName"
                    tools:text="Nome da Mãe" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/edit_text_animal_ethnicity"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/ethnicity"
                    tools:text="Loira..:p" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/edit_text_animal_weight"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/weight"
                    android:inputType="number"
                    tools:text="154 kg" />
            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/button_save"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="SALVAR" />

        </LinearLayout>
    </android.widget.ScrollView>

    <!--    <android.support.design.widget.AppBarLayout
        android:id="@+id/app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:contentScrim="?attr/colorPrimary"
            app:expandedTitleMarginEnd="64dp"
            app:expandedTitleMarginStart="48dp"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <include layout="@layout/toolbar" />

            <ImageView
                android:id="@+id/image_view_animal_image"
                android:layout_width="match_parent"
                android:layout_height="280dp"
                android:fitsSystemWindows="true"
                android:src="@drawable/ic_cow_white_48dp"
                app:layout_collapseMode="parallax" />
        </android.support.design.widget.CollapsingToolbarLayout>


    </android.support.design.widget.AppBarLayout>-->


    <!--<android.support.design.widget.FloatingActionButton-->
    <!--android:id="@+id/float_action_button_take_picture"-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="wrap_content"-->
    <!--app:layout_anchor="@id/app_bar_layout"-->
    <!--app:layout_anchorGravity="bottom|right|end"-->
    <!--android:layout_margin="@dimen/fab_margin"-->
    <!--android:src="@drawable/ic_photo_camera_white_36dp"/>-->
</android.support.v7.widget.LinearLayoutCompat>